--- a/src/main/resources/templates/layout/Plantilla2.html
+++ b/src/main/resources/templates/layout/Plantilla2.html
@@ -8,6 +8,9 @@
         <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
         <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
         <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+        <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
+        <!-- Bootstrap Bundle with Popper -->
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
     </head>
     <body>
         <header th:fragment="header" class="container-lg py-4">
@@ -18,10 +21,30 @@
                 </a>
 
                 <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/">Gestiones de Clases</a>
-                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/estudiantes">Gestión de Estudiantes</a>
+                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/asistencias">Gestiones de Clases</a>
+                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/estudiantes/listado">Gestión de Estudiantes</a>
                     <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Configuración</a>
-                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/">Salir</a>
+                    <div>
+                        <ul class="navbar-nav" sec:authorize="!isAuthenticated()">
+                            <li class="nav-item px-2">
+                                <a class="nav-menu-link nav-link" th:href="@{/login}">
+                                    <i class='fas fa-sign-in-alt'></i>
+                                </a>
+                            </li>                            
+                        </ul>
+                        <ul class="navbar-nav d-flex align-items-center" sec:authorize="isAuthenticated()">
+                            <li class="nav-item text-white mx-2">
+                                <span sec:authentication='name'>Santi</span>
+                            </li>
+                            <li class="nav-item mx-2">
+                                <form method="post" th:action="@{/logout}">
+                                    <button class="btn btn-dark">
+                                        <i class="fas fa-sign-out-alt"></i>
+                                    </button>
+                                </form>
+                            </li>                            
+                        </ul>
+                    </div>
                 </nav>
             </div>
         </header>
