--- a/src/main/resources/templates/estudiante/fragmentos.html
+++ b/src/main/resources/templates/estudiante/fragmentos.html
@@ -108,12 +108,12 @@
                 <div class="col-md-2"></div>
                 <div class="col-md-8">
                     <form method="POST" 
-                          th:action="@{/estudiantes/guardar}" 
-                          th:object="${estudiante}" 
+                          th:action="@{/estudiantes/actualizar}" 
+                          th:object="${matricula}" 
                           class="was-validated" 
                           enctype="multipart/form-data">
-                        <input type="hidden" name=" id" th:field="*{id}"/>
-                        <input type="hidden" th:field="*{persona.id}"/>
+                        <input type="hidden" name="id" th:field="*{estudiante.id}"/>
+                        <input type="hidden" th:field="*{estudiante.persona.id}"/>
                         <section th:replace="~{estudiante/fragmentos :: botonesEditar}"/>
                         <div id="details">
                             <div class="container">
@@ -128,48 +128,48 @@
                                                 <div class="mb-3">
                                                     <label for="identificacion">Id del estudiante</label>
                                                     <input type="number" class="form-control" 
-                                                           id="identificacion" name="persona.identificacion"
-                                                           th:field="*{persona.identificacion}" required="true">
+                                                           id="identificacion" name="estudiante.persona.identificacion"
+                                                           th:field="*{estudiante.persona.identificacion}" required="true">
                                                 </div>
                                                 <div class="mb-3">
                                                     <label for="nombre">Nombre del estudiante</label>
                                                     <input type="text" class="form-control" 
-                                                           id="nombre" name="persona.nombre"
-                                                           th:field="*{persona.nombre}" required="true">
+                                                           id="nombre" name="estudiante.persona.nombre"
+                                                           th:field="*{estudiante.persona.nombre}" required="true">
                                                 </div>
                                                 <div class="mb-3">
                                                     <label for="apellido1">Primer apellido</label>
                                                     <input type="text" class="form-control" 
-                                                           id="apellido1" name="persona.apellido1"
-                                                           th:field="*{persona.apellido1}" required="true">
+                                                           id="apellido1" name="estudiante.persona.apellido1"
+                                                           th:field="*{estudiante.persona.apellido1}" required="true">
                                                 </div>
                                                 <div class="mb-3">
                                                     <label for="apellido2">Segundo apellido</label>
                                                     <input type="text" class="form-control" 
-                                                           id="apellido2" name="persona.apellido2"
-                                                           th:field="*{persona.apellido2}" required="true">
+                                                           id="apellido2" name="estudiante.persona.apellido2"
+                                                           th:field="*{estudiante.persona.apellido2}" required="true">
                                                 </div>
                                                 <div class="mb-3">
                                                     <label for="correo">Correo</label>
                                                     <input type="text" class="form-control" 
-                                                           id="correo" name="persona.correo"
-                                                           th:field="*{persona.correo}" required="true">
+                                                           id="correo" name="estudiante.persona.correo"
+                                                           th:field="*{estudiante.persona.correo}" required="true">
                                                 </div>
                                                 <div class="mb-3">
                                                     <label for="telefono">Teléfono</label>
                                                     <input type="text" class="form-control" 
-                                                           id="telefono" name="persona.telefono"
-                                                           th:field="*{persona.telefono}" required="true">
+                                                           id="telefono" name="estudiante.persona.telefono"
+                                                           th:field="*{estudiante.persona.telefono}" required="true">
                                                 </div>
                                                 <div class="mb-3">
-                                                    <label for="curso">Cursos</label>
-                                                    <select class="form-control" id="curso" name="curso.id" required="true">
+                                                    <label for="curso.id">Cursos</label>
+                                                    <select class="form-control" id="curso" name="curso.id" required="true" th:field="*{curso.id}">
                                                         <option th:each="curso : ${cursos}" th:value="${curso.id}" th:text="${curso.nombre}"></option>
                                                     </select>
                                                 </div>
                                                 <div class="mb-3">
-                                                    <label for="periodo">Período</label>
-                                                    <select class="form-control" id="periodo" name="periodo.id" required="true">
+                                                    <label for="periodo.id">Período</label>
+                                                    <select class="form-control" id="periodo" name="periodo.id" required="true" th:field="*{periodo.id}">
                                                         <option th:each="periodo : ${periodos}" th:value="${periodo.id}" th:text="${periodo.ano + ' - Cuatrimestre ' + periodo.cuatrimestre}"></option>
                                                     </select>
                                                 </div>
@@ -183,9 +183,10 @@
             </div>
         </section>
 
+
         <!-- 4 Fragmento que se utiliza en el fragmento anterior -->
         <section th:fragment="botonesEditar">
-            <div class="container py-4 mb-4 bg-light">
+            <div class="container py-4 mb-4">
                 <div class="row">
                     <div class="col-md-4 d-grid">
                         <a th:href="@{/estudiantes/listado}" class="btn btn-primary">
