--- a/src/main/resources/templates/layout/Plantilla2.html
+++ b/src/main/resources/templates/layout/Plantilla2.html
@@ -21,7 +21,7 @@
                 </a>
 
                 <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/asistencias">Gestiones de Clases</a>
+                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/cursos/listado">Gestiones de Clases</a>
                     <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/estudiantes/listado">Gestión de Estudiantes</a>
                     <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Configuración</a>
                     <div>
