--- a/src/main/resources/templates/layout/Plantilla2.html
+++ b/src/main/resources/templates/layout/Plantilla2.html
@@ -21,9 +21,21 @@
                 </a>
 
                 <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/cursos/listado">Gestiones de Clases</a>
-                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/estudiantes/listado">Gestión de Estudiantes</a>
+                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/cursos/listado2">Gestiones de Clases</a>
+                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" >Gestión de Estudiantes</a>
                     <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Configuración</a>
+                    <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="configuracionDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                            Configuración
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="configuracionDropdown">
+                            <li><a class="dropdown-item" href="/cursos/listado">Insertar Nuevo Curso</a></li>
+                            <li><a class="dropdown-item" href="/#">Insertar Nuevo Periodo</a></li>
+                            <li><a class="dropdown-item" href="/estudiantes/listado">Insertar Estudiante</a></li>
+                            <li><a class="dropdown-item" href="/#">Insertar Matricula</a></li>
+                        </ul>
+                    </div>
+
                     <div>
                         <ul class="navbar-nav" sec:authorize="!isAuthenticated()">
                             <li class="nav-item px-2">
